:package: Add required characteristics

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,6 @@
   "ignorePatterns": ["dist"],
   "rules": {
     "quotes": ["warn", "single"],
-    "indent": ["warn", 2, { "SwitchCase": 1 }],
     "semi": ["off"],
     "comma-dangle": ["warn", "always-multiline"],
     "dot-notation": "off",
@@ -36,6 +35,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/semi": ["warn"],
     "@typescript-eslint/member-delimiter-style": ["warn"]
   }
