--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "private": true,
   "displayName": "Xiaomi Mi Air Purifier",
   "name": "homebridge-xiaomi-mi-air-purifier",
-  "version": "1.0.0",
+  "version": "0.1.0-beta.0",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
