--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "bugs": {
     "url": "https://github.com/torifat/xiaomi-mi-air-purifier/issues"
   },
+  "funding": {
+    "type": "paypal",
+    "url": "https://paypal.me/RifatNabi"
+  },
   "engines": {
     "node": ">=10.17.0",
     "homebridge": ">=1.0.0"
@@ -28,7 +32,7 @@
     "homebridge-plugin"
   ],
   "dependencies": {
-    "@rifat/miio": "^1.3.0"
+    "@rifat/miio": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
