:wrench: Upgrade to Homebridge 1.3.0
- Fix plugin slows down warning

Fixes #212

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     // uses the recommended rules from the @typescript-eslint/eslint-plugin
     "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
